--- a/jogo.css
+++ b/jogo.css
@@ -4,7 +4,225 @@ body {
     justify-content:center;
     align-items:center;
 }/*centralizar o jogo*/
-.game{
+.game{body {
+    min-height:95vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-family: sans-serif;
+}/*centralizar o jogo*/
+.game {
+    border-radius: 10px; 
+    border:1px solid black;
+    width: 500px;
+    height: 500px;
+    position: relative;
+    background: linear-gradient(#087edf,#53a8ee,#90b7d6,#ffffff,#ffffff);
+    overflow: hidden;
+    
+}
+
+.chao {
+ position: absolute;
+    bottom: -35px;;
+    display: inline-block;
+}
+.center {   
+    display:flex;
+    justify-content: center;
+    align-items:center;
+}
+
+input[type = 'text'] {
+    width: 200px;
+    background-color: #eacda1;
+    border-color: #eacda1;
+    border-width: 4px;
+    border-style: solid;
+    height: 20px;
+    border-radius: 10px;
+}
+input[type = 'text']:hover{
+    border-color: #c5a067;
+}
+
+/*config do quadrado do game*/
+
+.personagem{
+    position: absolute;
+    width:120px;
+    bottom: 0;
+    
+}/*personagem principal*/
+
+.jump {
+    animation: pulo_animation 800ms linear;
+}
+
+.move_obstaculo{
+    animation: obstaculo_animation 2.5s infinite linear; 
+}
+
+.obstaculo{
+    position: absolute;
+    height: 70px;
+    bottom: 0  ;
+    right: -119px ;
+}/*obstáculo do game*/
+   
+@keyframes pulo_animation{
+    0%{
+        bottom: 0px;
+    }
+    30%{
+        bottom: 130px;
+    }
+    50%{
+        bottom: 170px
+    }
+    70%{
+        bottom: 130px;
+    }
+    100%{
+        bottom: 0px;
+    }
+}/*animação de pular*/
+@keyframes obstaculo_animation {
+
+from{
+    right:-120px;
+}
+to {
+    right:100%;
+}
+} 
+/*obstáculo mover para o lado*/
+
+#tempo{
+    background-color: #f2b964; 
+    border-radius:5px;
+    position: absolute;
+    padding: 3px 5px 3px 5px;
+    font-size: small;
+    right:10px;
+    top:0px;
+}/*organizacao do placar de tempo*/
+
+
+
+#pontos{
+    border-radius:7px;
+    background: #694208;
+    padding: 5px ;  
+    position: absolute;
+    right: 120px;
+    top:0px;
+}
+
+
+#GameOver_menu{
+    text-align: center;     
+    margin-top: 20px;
+    padding:20px;
+    background: #ec9e2a;
+    border-radius:10px;
+    z-index: 1;
+}
+.boxIniciar{
+    text-align: center;
+    margin-top: 20px;
+    justify-content:center;
+    align-items:center;
+    height: auto;
+    width: auto;
+    padding:20px;
+    background: #ec9e2a;
+    border-radius:10px;
+    z-index: 1;
+}
+.bt {
+    border-radius: 5px;
+    border-style: none;
+    background-color: #f2b964;
+    padding: 5px 10px 5px 10px;
+    font-weight: 600;
+    margin: 2px;
+}
+.bt:hover {
+    background-color: #9d7a46;
+    color: #ffffff;
+}
+.ranking {
+    text-align: left;
+    font-weight: 600;
+    background-color: #f1c076;
+    border-radius: 8px;
+    padding: 10px;
+    overflow-y: auto;
+    width: calc(100% - 20px);
+    height: 150px;
+    margin-bottom: 15px;
+}
+.play{
+    position: absolute;
+    right:45%;
+    bottom: 70px;
+}
+
+
+.botao_escolha {
+    display: inline-block;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.personagem {
+    pointer-events: none;
+    width: 100px;
+    height: auto;
+    border-radius: 50%; 
+    transition: transform 0.2s ease-in-out; 
+}
+
+
+#personagem1 {
+    transform: translateY(-245px) translateX(75px);
+}
+#personagem2 {
+    transform: translateY(-245px) translateX(-175px);
+}
+
+.animacao_botao{
+    animation: botao_animation 700ms;
+    }
+    
+    .botao_escolha{
+        height:200px;
+        width: 100px;
+        background-color: #ffffff;
+        border-radius:10px;
+        display: inline-block;
+    }
+
+   
+
+    
+    
+    
+    @keyframes botao_animation{
+    0%{background-color: white;}
+    10%{background-color: rgb(0, 229, 255);}
+    20%{background-color: white;}
+    30%{background-color: rgb(0, 229, 255);}
+    40%{background-color: white;}
+    50%{background-color: rgb(0, 229, 255);}
+    60%{background-color: white;}
+    70%{background-color: rgb(0, 229, 255);}
+    80%{background-color: white;}
+    90%{background-color: rgb(0, 229, 255);}
+    100%{background-color: white;}
+    }
+
     border-radius: 15px; 
     border:1px solid black;
     border-bottom: 10px solid rgb(11, 212, 11)  ;
